implement rule execution engine